catalog-filter z-index fix + combobox color fix + checkbox__label color fix

--- a/src/css/base/_checkboxes_and_radio.sass
+++ b/src/css/base/_checkboxes_and_radio.sass
@@ -23,7 +23,7 @@
       outline: 1px dotted #000
 
   &__text
-    color: #ccc
+    //color: #ccc
     cursor: pointer
 
 .checkbox-icon,
