--- a/src/css/base/_combobox.sass
+++ b/src/css/base/_combobox.sass
@@ -32,7 +32,7 @@
     background-color: transparent
     border: none
     border-bottom: 1px solid $lines-color
-    color: #ccc
+    //color: #ccc
     cursor: pointer
     display: flex
     height: 40px
