--- a/src/css/project/_catalog-filter.sass
+++ b/src/css/project/_catalog-filter.sass
@@ -1,5 +1,7 @@
 .catalog-filter
   font-size: 14px
+  position: relative
+  z-index: 2
 
   @media(min-width: 768px)
     border-bottom: 1px solid $lines-color
